--- a/src/apps/common/submodules/portWizard/partials/_step-carrierSelection.scss
+++ b/src/apps/common/submodules/portWizard/partials/_step-carrierSelection.scss
@@ -20,6 +20,9 @@
 
 		.number-list-item {
 			padding: 0.5rem;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	}
 }
